# unified-downloader

./: .gitignore  README.md  pyproject.toml
src/: unified_downloader_mcp_server.py
unified_downloader/: __init__.py  cli.py
unified_downloader/adapters/: __init__.py  a_stock.py  base.py  h_stock.py  m_stock.py
unified_downloader/core/: __init__.py  async_downloader.py  config.py  downloader.py
unified_downloader/exceptions/: __init__.py  errors.py
unified_downloader/infra/: __init__.py  audit.py  cache.py  checkpoint.py  circuit_breaker.py  http_client.py  rate_limiter.py
unified_downloader/models/: __init__.py  callbacks.py  entities.py  enums.py
